--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,15 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: Build Helm Container
+          name: Build Container
           command: |
             GIT_BRANCH=$CIRCLE_BRANCH make docker_build
       - run:
-          name: Test Helm container
+          name: Test Container
           command: |
             GIT_BRANCH=$CIRCLE_BRANCH make docker_test
       - run:
-          name: Publish Helm container
+          name: Publish Container
           command: |
             echo $DOCKER_PASS | base64 -d > ${HOME}/docker_pass
             docker login -u $DOCKER_USER -p "$(cat ${HOME}/docker_pass)"
